# wademehome

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  README.md  RUNBOOK.md  SECURITY.md  listing_amenities_parsers.py  reddit-replies.md
.github/: dependabot.yml  dependency-review-config.yml
analytics/: WORKLOG.md  (+2 more)
api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh  sse_check.txt  sse_check3.txt  sse_try_property_listings.txt  sse_ui_check.txt  sse_ui_check2.txt  sse_ui_long.txt
api/alembic/: env.py
api/alembic/versions/: 20260320_0001_portal_core_schema.py  20260320_0002_auth_sessions_magic_links.py  20260320_0003_property_actions_persistence.py  20260321_0004_email_verification.py  20260322_0005_roommate_search_enabled.py  20260322_0006_listings_images_urls.py  20260322_0007_user_lease_and_profile_flag.py  20260323_0008_tours_constraints_indexes.py  20260323_0009_vendor_roommate_catalogs.py  20260323_0010_roommate_languages.py  20260323_0011_true_user_roommate_matching.py  20260323_0012_guarantor_esign_v2.py  20260323_0013_landlord_core.py  20260323_0014_landlord_leads_tours.py  20260323_0015_landlord_applications.py  20260323_0016_landlord_leases.py  20260323_0017_landlord_hardening.py  20260326_0018_listings_ai_search_indexes.py  20260328_0019_listings_amenity_embeddings.py  20260328_0020_listing_amenities_table.py  20260329_0021_listing_amenities_embedding_backfill_idx.py  20260329_0022_listing_amenities_unique_incl_source.py  20260329_0023_listing_amenities_norm_model_idx.py  20260330_0024_drop_listings_amenity_columns.py  20260401_0025_property_manager_role_and_report_subs.py  20260402_0026_drop_listings_concessions_column.py  20260402_0027_vendor_catalog_coverage_and_movein_state.py  20260402_0028_listing_amenities_embedding_not_null.py  20260402_0029_vendor_catalog_no_fake_scores_clear_seed.py  20260402_0030_seed_vendor_catalog.py  20260402_0031_insight_llm_cache.py  20260403_0032_pluto_building_cache.py  20260403_0033_movein_photo_documentation.py  20260403_0033_pm_metric_snapshots.py  20260403_0034_pm_metric_snapshots.py  20260417_0001_add_groups_and_group_scoping.py  20260417_0002_merge_heads.py  20260417_0003_review_core.py  20260417_0004_review_trust.py  20260417_0005_nyc_opendata.py  (+9 more)
api/docs/: property-manager-weekly-cron.md
api/evals/: __init__.py  __main__.py  cases.py  judge.py  models.py  report.py  runner.py
api/scripts/: bootstrap_hudson_yards_buildings.py  bootstrap_named_towers.py  export_openapi_to_ui.py
api/src/: main.py
api/src/admin/: __init__.py  inventory_analytics.py  router.py
api/src/agent/: events.py  router.py  tools.py  workflow.py
api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/src/applicants/: router.py  schemas.py  service.py
api/src/auth/: __init__.py  emailer.py  router.py  schemas.py  security.py
api/src/buildings/: router.py  schemas.py  service.py
api/src/core/: asgi_auth.py  body_size.py  config.py  cors_config.py  cors_middleware.py  env_utils.py  errors.py  flags.py  llama_cloud_compat.py  llm_factory.py  logger.py  observability.py  pagination.py  rate_limit.py  readiness.py  request_context.py  security_headers.py  sse.py  token.py
api/src/db/: __init__.py  engine.py  models.py  session.py
api/src/flags/: router.py
api/src/groups/: deps.py  router.py  schemas.py  service.py
api/src/guarantors/: public_router.py  router.py  schemas.py  service.py  storage.py
api/src/ingest/: acris.py  dob.py  geosupport.py  hpd.py  runs.py  socrata.py
api/src/landlord/: router.py  schemas.py  service.py
api/src/landlord_entities/: router.py  schemas.py  service.py
api/src/listings/: ai_search.py  listing_amenities_concessions.py  listings_inventory_schema.json  listings_table_cache.py  location_columns.py  mapbox_client.py  market_snapshot.py  nearby_mapper.py  price_histogram.py  property_key.py  router.py  schemas.py
api/src/movein/: geocode.py  lease_premises_extract.py  photo_router.py  photo_schemas.py  photo_service.py  router.py  schemas.py  service.py
api/src/portal/: __init__.py  lease_routes.py  router.py  schemas.py  service.py
api/src/prompts/: __init__.py  check_data_query.md  loader.py  profile_memory_update.md  search_hint.md  search_query_plan.md  search_summary.md  text2sql_chat.md  wrong_sql.md
api/src/properties/: router.py  schemas.py
api/src/property_manager/: __init__.py  ai_insights.py  census.py  nyc_property_data.py  router.py  scheduler.py  schemas.py  service.py
api/src/reviews/: router.py  schemas.py  service.py
api/src/reviews_admin/: router.py  schemas.py  service.py
api/src/roommates/: router.py  schemas.py  service.py
api/src/tours/: router.py  schemas.py  service.py
api/src/user_listings/: __init__.py  router.py  schemas.py  service.py  url_parser.py
api/src/workflow/: events.py  langchain_output_parser.py  llm_cache.py  property_parsing.py  utils.py  workflow.py
api/tests/: conftest.py  test_app_smoke.py  test_auth_rate_limits.py  test_body_size.py  test_db_engine.py  test_errors.py  test_flags.py  test_observability.py  test_pagination.py  test_rate_limit.py  test_readiness.py  test_request_context.py  test_security_headers.py
api/tests/agent_lifecycle/: last_run.json  run.py  spec.py
api/tests/fixtures/listing_amenities/: appfolio_detail_sample.html  entrata_jonah_amenities_sample.html  greystar_dom_only.html  greystar_highlights_only.html  greystar_next_data_sample.html  rentcafe_alt_layout.html  rentcafe_sample.html  securecafe_amenities_sample.html
api/tests/integration/: test_agent_chat.py  test_live_workflow.py
api/tests/unit/: test_auth_security.py  test_lease_premises_extract.py  test_listing_amenities_parsers.py  test_listing_sql_fallback.py  test_listings_by_property_key_router.py  test_listings_nearby_router.py  test_llm_text2sql_cache.py  test_mapbox_search_category.py  test_mapbox_us_state.py  test_market_snapshot.py  test_nearby_mapper.py  test_properties_pagination.py  test_property_key.py  test_property_parsing.py  test_stop_event_serialization.py
(+563 files in other folders)
