[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.5",
  "email-validator>=2.3.0",
  "fastapi>=0.116.1",
  "griffe>=1.14.0,<2",
  "jsonschema>=4.25.1",
  "langchain>=0.3.27,<1.0",
  "langfuse>=3.3.5",
  "llama-index>=0.14.18,<0.15.0",
  "llama-index-core>=0.14.18",
  "llama-index-llms-openai>=0.6.0",
  "llama-index-llms-azure-openai>=0.4.0",
  "llama-index-server>=0.1.27",
  "openinference-instrumentation-llama-index>=4.3.5",
  "psycopg2-binary>=2.9.10",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "sqlalchemy>=2.0.43",
  "uvicorn>=0.35.0",
  "pyodbc>=5.3.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
  "integration: integration tests that may hit real services (DB/LLM)",
  "live: live test subset gated behind env vars (no mocks)",
]

[tool.hatch.build]
sources = { "src" = "" }

# load_app_prompt() opens *.md next to loader.py; ship them via force-include (not only *.py).
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/prompts/check_data_query.md" = "prompts/check_data_query.md"
"src/prompts/search_hint.md" = "prompts/search_hint.md"
"src/prompts/search_summary.md" = "prompts/search_summary.md"
"src/prompts/text2sql_chat.md" = "prompts/text2sql_chat.md"
"src/prompts/wrong_sql.md" = "prompts/wrong_sql.md"
