[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.5",
  "email-validator>=2.3.0",
  "fastapi>=0.116.1",
  "griffe>=1.14.0,<3",
  "jsonschema>=4.25.1",
  "langchain>=0.3.27,<1.0",
  "langfuse>=4.3.1,<5",
  "llama-index>=0.14.18,<0.15.0",
  "llama-index-core>=0.14.18",
  "llama-index-llms-openai>=0.6.0",
  "llama-index-llms-azure-openai>=0.4.0",
  "llama-index-server>=0.1.27",
  "openinference-instrumentation-llama-index>=4.3.5",
  "psycopg2-binary>=2.9.10",
  "resend>=2.25.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.43",
  "uvicorn>=0.35.0",
  "pyodbc>=5.3.0",
  "azure-storage-blob>=12.28.0",
  "apscheduler>=3.10,<4",
  "structlog>=24.4.0",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "bandit>=1.7.0",
  "pip-audit>=2.7.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "respx>=0.21.0",
  "freezegun>=1.5.0",
  "types-requests",
]
observability = [
  "sentry-sdk[fastapi]>=2.0.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
  "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
  "integration: integration tests that may hit real services (DB/LLM)",
  "live: live test subset gated behind env vars (no mocks)",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["alembic", "scripts"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
  "C4",     # flake8-comprehensions
  "RUF",    # ruff-specific
]
ignore = [
  "E501",   # line length: handled by black
  "B008",   # do not perform function call in argument defaults (FastAPI uses Depends())
  "UP007",  # Union vs. Optional syntax: keep both tolerable
  "SIM108", # ternary preference: sometimes if/else reads better
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "E402"]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
extend-exclude = "alembic|scripts"

[tool.mypy]
python_version = "3.11"
# Start lenient — tighten per module over time (see [[tool.mypy.overrides]]).
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
exclude = [
  "alembic/",
  "scripts/",
  "tests/",
]

[[tool.mypy.overrides]]
module = ["core.request_context", "core.observability", "core.rate_limit", "core.security_headers", "core.errors", "core.pagination"]
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "alembic", "scripts"]
# B101: assert usage — tests use it; B601/602 handled case-by-case.
skips = ["B101"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
  "alembic/*",
  "scripts/*",
  "tests/*",
  "src/workflow/legacy_*.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.setuptools.packages.find]
where = ["src"]

# load_app_prompt() reads *.md next to loader.py; setuptools wheels omit them unless declared here.
[tool.setuptools.package-data]
prompts = ["*.md"]
